# mult_var_pseudospectrum_in_Cstar_algebras-py

./: .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh
pseudospectrum/: __init__.py  backends.py  clifford.py  examples.py  tensor_network.py
tests/: test_pseudospectrum.py
